--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,10 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+  gap: 32px;
 }
 
 img {
@@ -10,6 +15,23 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.plants{
+  display: flex;
+  flex: auto;
+  gap: 12px;
+  justify-content: stretch;
+  gap: 52px;
+}
+
+.plant{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 200px;
+  gap: 12px;
 }
 
 /* do not edit this footer */
